# simple-grpc

./: Dockerfile  README.md  docker-compose.yml
client/: Dockerfile  client.py  rfcontrol_pb2.py  rfcontrol_pb2_grpc.py
proto/: rfcontrol.grpc.pb.cc  rfcontrol.grpc.pb.h  rfcontrol.pb.cc  rfcontrol.pb.h  rfcontrol.proto
server/: CMakeLists.txt  server.cpp  visa_handler.cpp  visa_handler.h
